--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>net.daw</groupId>
-    <artifactId>Ajax-Yield</artifactId>
+    <artifactId>GestorTareas</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
